Issue #SB-4449 fix: Limited Content : When limited content opens via shared URL, gui glitch visible

--- a/src/app/client/src/app/modules/core/components/main-header/main-header.component.css
+++ b/src/app/client/src/app/modules/core/components/main-header/main-header.component.css
@@ -6,6 +6,8 @@
     border-bottom: 2px solid rgba(34,36,38,.15);   
 }
 
-.header-height-before-login {
+.ui.grid>.header-height-before-login {
     height: 80px;
+    justify-content: center;
+    align-items: center;
 }
